# beneath_the_sands

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
prefabs/: boss.ron  bullet.ron  camera.ron  chode.ron  dummy.ron  exit.ron  hard_chode.ron  hard_shotgunner.ron  hard_spinner.ron  player.ron  shotgunner.ron  spinner.ron  target.ron
src/: enemy_ai.rs  gameplay.rs  level_generation.rs  main.rs  physics.rs  player.rs  prefabs.rs  render.rs  sound.rs  world_generation.rs  world_map.rs
src/level_generation/: cellular_automata.rs  cyclic.rs  mod.rs
static/: title.afdesign
