[package]
name = "specs-test"
version = "0.1.0"
authors = ["Max Hunt <max@huntw3.com>"]
edition = "2018"

[dependencies]
quicksilver = {version = "0.3"}
specs = {version = "0.14"}
rand = "0.6"

# Alt specs dependency for web version. Needed because specs with parallel doesn't work on web version.
# Specifying different dependencies for the web version in cargo-web seems to be broken so this will have to do.
#specs = {version = "0.14", default-features = false}

[build-dependencies]
serde = "1.0"
ron = "0.4"
handlebars = "1.1"
